--- a/src/components/experience/styles.css
+++ b/src/components/experience/styles.css
@@ -1,3 +1,7 @@
+.content {
+	display: flex;
+	flex-direction: row;
+}
 .experience {
 	display: flex;
 	flex-direction: column;
@@ -7,23 +11,15 @@
 }
 .experience .item {
 	margin: 10px 0;
-}
-.experience .image-item {
-	height: 50vw;
-	background-color: #31373e;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 10px 10px 0 0;
 }
 .experience .info-item {
 	display: flex;
 	flex-direction: column;
 	flex: 1 1 auto;
 	align-items: flex-start;
-	padding: 32px;
 	width: 100%;
-	background-color: #ffd24e;
+	background-color: var(--bg-color);
 	border-radius: 0 0 10px 10px;
 }
 .experience .info-item .title {
@@ -41,6 +37,11 @@
 	color: #292f35;
 }
 .experience .info-item .category {
+	display: flex;
+	flex-wrap: wrap;
+}
+.experience .info-item .category p {
+	margin: 0 1vh 1vh 0;
 	font-size: 12px;
 	font-weight: 500;
 	line-height: 1;
@@ -58,6 +59,43 @@
 	color: #292f35;
 	margin-bottom: 12px;
 }
+.experience .timeline {
+	-webkit-transition: top 0.3s ease-out;
+	transition: top 0.3s ease-out;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 20%;
+}
+.timeline ul {
+	list-style: none;
+	list-style-position: inside;
+	margin: 1vh 0;
+}
+.timeline ul li {
+	margin: 2vh 0;
+	padding-left: 0;
+	list-style-type: none;
+	color: #bfc1c3;
+	border-bottom: 1px dotted rgba(0, 0, 0, 0.3);
+	cursor: pointer;
+	-webkit-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+}
+.timeline ul li.active {
+	font-weight: bold;
+	color: #f94125;
+	border-bottom: 1px dotted transparent;
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
+}
+.timeline ul li:hover {
+	color: #000;
+}
+.timeline ul li:hover > .experience .info-item {
+	background-color: #000;
+}
+
 @media (min-width: 768px) {
 	.experience {
 		flex-direction: row;
@@ -75,40 +113,17 @@
 @media (min-width: 1140px) {
 	.experience .item {
 		display: flex;
-		flex-direction: row-reverse;
 		width: 100%;
 	}
 	.experience .item .title {
 		flex-flow: row;
 		align-items: center;
 	}
-	.experience .item:nth-child(odd) {
-		display: flex;
-		flex-direction: row-reverse;
-	}
-	.experience .item:nth-child(odd) .image-item {
-		border-radius: 0 10px 10px 0;
-	}
-	.experience .item:nth-child(odd) .info-item {
-		border-radius: 10px 0 0 10px;
-	}
-	.experience .item:nth-child(even) {
-		display: flex;
-		flex-direction: row;
-	}
-	.experience .item:nth-child(even) .image-item {
-		border-radius: 10px 0 0 10px;
-	}
-	.experience .item:nth-child(even) .info-item {
-		border-radius: 0 10px 10px 0;
-	}
-	.experience .image-item {
-		width: 50%;
-		min-height: 250px;
-		height: auto;
-	}
 	.experience .info-item {
 		width: 50%;
 		justify-content: center;
+	}
+	.experience .timeline {
+		width: 35%;
 	}
 }
