--- a/src/components/experiences/styles.css
+++ b/src/components/experiences/styles.css
@@ -1,7 +1,6 @@
 .experiences {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	gap: 24px;
 	margin: 0px auto;
 	width: 100%;
@@ -9,6 +8,9 @@
 }
 .experiences h1 {
 	width: 100%;
+}
+.experiences h2 {
+	margin-bottom: 3vh;
 }
 .experiences .social-icons {
 	background-color: rgb(255, 255, 255);
@@ -19,6 +21,7 @@
 	padding: 12px 16px;
 	width: 100%;
 	max-width: 240px;
+	align-self: center;
 }
 .experiences .social-icons a {
 	-moz-box-align: center;
