--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -18,51 +18,6 @@
 	src: url("../../fonts/Rubik-Bold.ttf");
 }
 
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-html,
-body,
-p,
-ol,
-ul,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-fieldset,
-legend,
-textarea,
-pre,
-iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin: 0;
-	padding: 0;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-size: 100%;
-	font-weight: normal;
-}
-ul {
-	list-style: none;
-}
-button,
-input,
-select,
-textarea {
-	margin: 0;
-}
 html,
 body {
 	box-sizing: border-box;
@@ -79,6 +34,13 @@ body {
 	--dark-gray: #4d3d33;
 	--light-gray: #eee;
 }
+
+* {
+	margin: 0;
+	padding: 0;
+	outline: 0;
+	box-sizing: border-box;
+}
 a,
 h1,
 h2,
@@ -90,13 +52,16 @@ strong,
 span,
 li,
 input,
+body,
+html,
+input,
 button {
 	font-family: "Rubik-Regular", sans-serif !important;
 }
-*,
-*::before,
-*::after {
-	box-sizing: inherit;
+#root {
+	max-width: 960px;
+	margin: 0 auto;
+	padding: 40px 20px;
 }
 img,
 video {
@@ -105,18 +70,6 @@ video {
 }
 iframe {
 	border: 0;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-td,
-th {
-	padding: 0;
-}
-td:not([align]),
-th:not([align]) {
-	text-align: left;
 }
 body {
 	overflow-x: hidden;
@@ -152,6 +105,11 @@ p {
 }
 .layout h3 {
 	font-size: 1.1rem;
+	font-weight: normal;
+	letter-spacing: -0.5px;
+}
+.layout h4 {
+	font-size: 0.7rem;
 	font-weight: normal;
 	letter-spacing: -0.5px;
 }
