--- a/src/templates/styles.css
+++ b/src/templates/styles.css
@@ -17,7 +17,7 @@
 }
 
 .single-post section {
-	margin: 5vh 0 3vh;
+	margin: 5vh 0 0vh;
 }
 .single-post section h2 {
 	margin: 4vh 0 1vh;
@@ -32,6 +32,9 @@
 }
 .single-post .button {
 	align-self: center;
+}
+.single-post hr {
+	margin: 4vh 0;
 }
 @media (min-width: 768px) {
 	.single-post .button {
