Add repositories to projects

--- a/src/components/experiences/styles.css
+++ b/src/components/experiences/styles.css
@@ -1,7 +1,6 @@
 .experiences {
 	display: flex;
 	flex-direction: column;
-	gap: 24px;
 	margin: 0px auto;
 	width: 100%;
 	background-color: var(--bg-color);
@@ -10,7 +9,7 @@
 	width: 100%;
 }
 .experiences h2 {
-	margin-bottom: 3vh;
+	margin: 8vh 0 2vh;
 }
 .experiences .social-icons {
 	background-color: rgb(255, 255, 255);
