--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -31,8 +31,8 @@
 	border-radius: 0.125rem;
 }
 .works section article .image .gatsby-image-wrapper {
-	max-width: 200px;
-	max-height: 200px;
+	max-width: 128px;
+	max-height: 128px;
 }
 .works section article a:hover .image {
 	box-shadow: 0 18px 35px rgba(90, 50, 50, 0.1),
@@ -75,6 +75,10 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: space-between;
+	}
+	.works section article .image .gatsby-image-wrapper {
+		max-width: 200px;
+		max-height: 200px;
 	}
 	.works section article {
 		width: 48%;
