--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -4,6 +4,8 @@ header {
 	padding-bottom: 1rem;
 	height: 87px;
 	background-color: #fff;
+	margin-bottom: 4vh;
+	box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
 }
 header .wrapper {
 	display: flex;
