--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -31,8 +31,9 @@
 	border-radius: 0.125rem;
 }
 .works section article .image .gatsby-image-wrapper {
+	width: 30%;
 	max-width: 170px;
-	max-height: 128px;
+	max-height: 100px;
 }
 .works section article a:hover .image {
 	box-shadow: 0 18px 35px rgba(90, 50, 50, 0.1),
