--- a/src/templates/styles.css
+++ b/src/templates/styles.css
@@ -7,11 +7,16 @@
 	display: flex;
 	flex-direction: column;
 }
+.single-post .header h1 {
+	margin-bottom: 1vh;
+}
 .single-post .header h2 {
 	margin-bottom: 5vh;
 	text-transform: none;
+	margin-bottom: 1vh;
 }
 .single-post .header h4 {
+	margin-bottom: 1vh;
 	letter-spacing: 0;
 	text-transform: none;
 }
@@ -22,6 +27,23 @@
 .single-post section h2 {
 	margin: 4vh 0 1vh;
 	font-weight: 700;
+	font-size: 1.2rem;
+}
+.single-post section h3 {
+	font-size: 1.4rem;
+	margin: 4vh 0 1vh;
+	font-weight: 700;
+}
+.single-post section h4 {
+	text-transform: capitalize;
+	font-size: 1.3rem;
+	margin: 4vh 0 1vh;
+	font-weight: 700;
+}
+.single-post section pre {
+	background-color: #e3e3e3;
+	padding: 1vh 0;
+	margin-bottom: 1vh;
 }
 .single-post section ul {
 	margin-bottom: 2vh;
